[tool.poetry]
name = "lmd-ukr"
version = "0.1.0"
description = "Out of curiosity, comments activity on Le Monde Ukraine coverage"
authors = ["Matthieu Vion <deletethisvionmatthieu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lmd_ukr"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
jupyterlab = "^3.6.1"
httpx = "^0.23.3"
python-dotenv = "^0.21.1"
selectolax = "^0.3.12"
pyrate-limiter = "^2.10.0"
joblib = "^1.2.0"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
